--- a/wenquxing/package.json
+++ b/wenquxing/package.json
@@ -5,13 +5,13 @@
   "dependencies": {
     "@hashgraph/sdk": "^2.35.0",
     "@testing-library/jest-dom": "^5.17.0",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
-    "react": "16.20.2",
-    "react-dom": "16.20.2",
-    "react-scripts": "^3.0.1",
-    "web-vitals": "^2.1.4",
-    "web3": "^4.1.2"
+    "@testing-library/react": "^11.2.7",
+    "@testing-library/user-event": "^12.8.3",
+    "react": "^16.14.0",
+    "react-dom": "^16.14.0",
+    "react-scripts": "4.0.3",
+    "web-vitals": "^1.1.2",
+    "web3": "^1.6.1"
   },
   "scripts": {
     "start": "react-scripts start",
