--- a/wenquxing/package.json
+++ b/wenquxing/package.json
@@ -7,9 +7,12 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "axios": "^1.5.1",
+    "concurrently": "^8.2.1",
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "mongoose": "^7.6.2",
+    "nodemon": "^3.0.1",
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
     "react-scripts": "4.0.3",
