--- a/wenquxing/package.json
+++ b/wenquxing/package.json
@@ -16,6 +16,7 @@
     "nodemon": "^3.0.1",
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
+    "react-markdown": "^6.0.3",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.1.2",
     "web3": "^1.6.1"
