--- a/wenquxing/package.json
+++ b/wenquxing/package.json
@@ -12,12 +12,14 @@
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "mongodb": "^6.1.0",
     "mongoose": "^7.6.2",
     "nodemon": "^3.0.1",
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
     "react-markdown": "^6.0.3",
     "react-scripts": "4.0.3",
+    "realm": "^12.2.1",
     "web-vitals": "^1.1.2",
     "web3": "^1.6.1"
   },
